<resources>
    <string name="app_name">Cricket Score Counter</string>
    <string name="reset">Reset</string>
    <string name="one_player_out">+1 Player Out</string>
    <string name="team_b_out">Team B Out</string>
    <string name="six_runs">+6 Runs</string>
    <string name="four_runs">+4 Runs</string>
    <string name="three_runs">+3 Runs</string>
    <string name="two_runs">+2 Runs</string>
    <string name="one_run">+1 Run</string>
    <string name="team_b_score">Team B Score</string>
    <string name="team_a_out">Team A Out</string>
    <string name="team_a_score">Team A Score</string>
</resources>
