<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="lokeshsaini.courtcounter.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/team_a_score"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/team_a_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:onClick="teamA1"
                        android:text="@string/one_run" />

                    <Button
                        android:id="@+id/team_a_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:onClick="teamA2"
                        android:text="@string/two_runs" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/team_a_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:onClick="teamA3"
                        android:text="@string/three_runs" />

                    <Button
                        android:id="@+id/team_a_4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:onClick="teamA4"
                        android:text="@string/four_runs" />
                </LinearLayout>

                <Button
                    android:id="@+id/team_a_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorPrimary"
                    android:onClick="teamA6"
                    android:text="@string/six_runs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/team_a_out"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_a_out_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/team_a_out_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorPrimary"
                    android:onClick="teamAOut"
                    android:text="@string/one_player_out" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/team_b_score"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/team_b_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:onClick="teamB1"
                        android:text="@string/one_run" />

                    <Button
                        android:id="@+id/team_b_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:onClick="teamB2"
                        android:text="@string/two_runs" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/team_b_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:onClick="teamB3"
                        android:text="@string/three_runs" />

                    <Button
                        android:id="@+id/team_b_4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:onClick="teamB4"
                        android:text="@string/four_runs" />
                </LinearLayout>

                <Button
                    android:id="@+id/team_b_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorPrimary"
                    android:onClick="teamB6"
                    android:text="@string/six_runs" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/team_b_out"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/team_b_out_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@android:color/black"
                    android:textSize="50sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/team_b_out_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@color/colorPrimary"
                    android:onClick="teamBOut"
                    android:text="@string/one_player_out" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:onClick="resetScore"
            android:text="@string/reset" />

    </RelativeLayout>

</ScrollView>
